<resources>
    <string name="app_name">강남대학교 시간표</string>

    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="quit_app">한번 더 누르면 종료되요</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="calculate_grade_title">이번학기 성적 계산</string>
    <string name="previous_grade_title">지난학기 성적</string>
    <string name="Score_hint">성적</string>
    <string name="Unit_hint">학점</string>
    <string name="change_color"><u>색 변경</u></string>
    <string name="Score_value_0">A+</string>
    <string name="Score_value_1">A</string>
    <string name="Score_value_2">B+</string>
    <string name="Score_value_3">B</string>
    <string name="Score_value_4">C+</string>
    <string name="Score_value_5">C</string>
    <string name="Score_value_6">D+</string>
    <string name="Score_value_7">D</string>
    <string name="Score_value_8">F</string>

    <string name="Unit_value_0">0학점</string>
    <string name="Unit_value_1">1학점</string>
    <string name="Unit_value_2">2학점</string>
    <string name="Unit_value_3">3학점</string>
    <string name="mon">월</string>
    <string name="tue">화</string>
    <string name="wed">수</string>
    <string name="thu">목</string>
    <string name="fri">금</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_temp">tempActivity</string>
    <string name="name_timetable">시간표</string>
    <string name="name_update_timetable">시간표 업데이트</string>
    <string name="subject_color">과목 색상</string>
    <string name="score">성적</string>
    <string name="grade">학점</string>
    <string name="part">구분</string>
    <string name="summary_upadate_timetable">과제 및 일정과의 연동 때문에 학기 또는 과목이 바뀌었을 때 사용하는 것을 권장합니다.</string>
    <string name="name_kyungchun">경천관</string>
    <string name="name_hoosang">후생관</string>
    <string name="name_mokyang">목양관</string>
    <string name="name_insa">인문사회관</string>
    <string name="name_kyoyook">교육관</string>
    <string name="name_leekong">이공관</string>
    <string name="name_library">도서관</string>
    <string name="name_main">본관</string>
    <string name="name_yesul">예술관</string>
    <string name="name_simjunA">심전1관(A동)</string>
    <string name="name_simjunB">심전1관(B동)</string>
    <string name="name_simjun2">심전2관</string>
    <string name="name_chuneun">천은관</string>
    <string name="name_woowon">우원관</string>
    <string name="name_shalom">샬롬관</string>
    <string name="name_shuttlebus_time">셔틀버스 출발시간</string>
    <string name="name_seungri">승리관</string>
    <string name="name_campusMap">캠퍼스 맵</string>
    <string name="name_schedule">과제 및 일정관리</string>
    <string name="name_score">성적계산 및 관리</string>
    <string name="name_scholarship">등록 및 장학금관리</string>
    <string name="name_setting">앱 설정</string>
    <string name="name_activity_library">도서검색 및 열람실좌석</string>
    <string name="name_my_timetable">내 시간표</string>
    <string name="name_navi_score">학점 계산, 관리</string>
    <string name="name_navi_schedule">과제, 일정 관리</string>
    <string name="name_navi_campusmap">캠퍼스맵, 교내 건물 정보</string>
    <string name="name_navi_scholarship">등록금, 장학금 관리</string>
    <string name="name_navi_email">이메일</string>
    <string name="name_navi_search">교직원 검색</string>
    <string name="name_navi_library">도서검색, 열람실 좌석정보</string>
    <string name="name_total_complete_grade">전체 이수학점</string>
    <string name="name_total_avg_grade">전체 평균학점</string>
    <string name="name_calculate_grade_semester">이번학기 학점계산</string>
    <string name="name_passed_semester">지난학기 학점</string>
    <string name="message_error_library_seat">교내서버로 부터 열람실 좌석 정보를 가져오는데 오류가 발생하였습니다.</string>
    <string name="message_error_invalid_ssl_certificate">교내서버의 인증서 기간만료로 요청이 거부되었습니다. 이 오류가 발생할 경우 \'설정->개발자에게\'를 통해 메일문의 부탁드립니다.</string>
    <string name="message_unknown">알 수 없는 오류가 발생하였습니다.</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="no_timetable">(시간표 없음)</string>
    <string name="coming_schedule">다가오는 일정</string>
    <string name="passed_schedule">기간이 지난일정</string>
    <string name="message_delete_schedule">선택한 일정이 삭제되었습니다</string>
    <string name="message_change_timetable_color">시간표 지정색이 변경되었습니다</string>
    <string name="message_no_bus">버스가 없습니다</string>
    <string name="message_no_content">내용을 입력해주세요</string>
    <string name="message_no_title">제목을 입력해주세요</string>
    <string name="message_now_preparing">이 기능은 현재 준비중입니다. 다음 업데이트를 기대해주세요!</string>
    <string name="message_empty_main_schedule">과제나 일정을 추가해주세요</string>
    <string name="message_soon_finished_schedule">일정이 곧 완료됩니다.</string>
    <string name="message_to_detail">자세히 보시려면 여기를 누르세요.</string>
    <string name="message_notify_helper_description">과제 및 일정관리 알림 설정입니다.</string>
    <string name="message_empty_passed_schedule">지난학기 일정 데이터가 없습니다.</string>
    <string name="message_skip_help_activity">언제든 앱 설정에서 가이드를 확인하실 수 있습니다.</string>
    <string name="message_invalid_schedule_time">마감시간이 현재 이후의 시간으로 해주세요</string>
    <string name="message_error_get_timetable_task">교내 서버에서 시간표 데이터를 가져오는데 알 수 없는 오류가 발생하였습니다. 다음에 다시 시도해주세요.</string>
    <string name="message_calculate_grade_hint">* 이번학기에 듣는 수업을 미리 학점 계산해보세요.\n* 학점과 성적을 선택하면 자동 계산됩니다.\n* Pass&amp;Fail과목은 학점을 0학점으로 입력해주세요.\n* 계산한 성적은 자동 저장됩니다.</string>
    <string name="okay">확인</string>
    <string name="cancel">취소</string>
    <string name="yes">네</string>
    <string name="no">아니오</string>
    <string name="finish">완료</string>
    <string name="alarm">알람</string>
    <string name="date">기간</string>
    <string name="alarm_type1">마감시간에 알람</string>
    <string name="content">내용</string>
    <string name="title">제목</string>
    <string name="importance">중요</string>
    <string name="student_id">학번</string>
    <string name="password">비밀번호</string>
    <string name="nameSubject">과목이름</string>
    <string name="subject">과목</string>
    <string name="jump">건너뛰기</string>
    <string name="buttonCreate">추가하기</string>
    <string name="message_empty_subject_schedule">추가한 과제나 일정이 없습니다.</string>
    <string name="nameSubjectSchedule">과제 및 일정</string>
    <string name="logout">로그아웃</string>
    <string name="login">로그인</string>
    <string name="user_info">사용자 정보</string>
    <string name="message_choice_subject">과목을 선택해주세요</string>
    <string name="schedule_finish">일정 완료</string>
    <string name="message_create_new_schedule">새로운 일정이 생겼어요.</string>
    <string name="message_edit_schedule">일정이 수정되었습니다.</string>
    <string name="message_changed_schedule_order">정렬 순서가 바뀌었습니다.</string>
    <string name="already_finish_schedule">이미 완료한 일정</string>
    <string name="choose_subject">항목 선택</string>
    <string name="select_alarm">알람시간 선택</string>
    <string name="message_please_knu_login">* 강남대학교 통합 로그인을 해주세요</string>
    <string name="message_search_map_hint">층 또는 장소 검색</string>
    <string name="message_search_schedule_hint">과목 또는 일정 검색</string>
    <string name="message_search_employee_hint">교직원 이름 또는 부서 검색</string>
    <string name="message_search_no_result">검색결과가 없습니다. 다시 검색해주세요</string>
    <string name="message_really_close">입력한 내용이 있습니다. 정말로 닫을까요?</string>
    <string name="message_cancel_login">로그인에 실패했습니다. 네트워크 상태를 확인하세요.</string>
    <string name="message_more_than_two">2글자 이상 입력해주세요.</string>
    <string name="message_empty_score">지난학기 성적 데이터가 없습니다.</string>
    <string name="message_no_network">네트워크 상태를 확인해주세요.</string>
    <string name="message_no_locations">위치정보를 찾을 수 없어 샬롬관으로 선택되었습니다.</string>
    <string name="message_empty_this_schedule">아직 일정이 없습니다. 얼른 일정을 추가해주세요 \n 만약 추가한 데이터가 안보이시면 다시 창을 키시거나 정렬 방법을 바꿔보세요.</string>
    <string name="message_cancel_building_info">건물 정보를 가져오는데 실패했습니다. 네트워크 상태를 학인하세요.</string>
    <string name="message_cancel_grade_info">학점을 가져오는데 실패했습니다. 네트워크 상태를 확인하세요.</string>
    <string name="message_cancel_timetable">시간표를 가져오는데 실패했습니다. 네트워크 상태를 확인하세요.</string>
    <string name="message_cancel_school_schedule">학사일정을 가져오는데 실패했습니다. 네트워크 상태를 확인하세요.</string>
    <string name="message_empty_timetable">시간표 데이터가 없습니다</string>
    <string name="message_no_timetable_data">시간표 데이터가 없습니다. 수강신청 이후 앱을 실행시켜보세요.</string>
    <string name="message_no_score_calculate">시간표 데이터가 없어 이번학기 학점계산이 불가능합니다.</string>
    <string name="message_empty_tuition">등록금 데이터가 없습니다.</string>
    <string name="message_empty_scholarship">장학금 데이터가 없습니다.</string>
    <string name="message_cancel_tuition_scholarship">등록금 및 장학금 데이터를 가져오는데 실패했습니다. 네트워크 상태를 확인하세요.</string>
    <string name="message_first_information_map_open">지도 뷰 아래 흰부분을 위로 올리면 해당 건물의 자세한 정보를 볼 수 있습니다.</string>
    <string name="message_input_id">학번을 입력해주세요</string>
    <string name="message_input_pw">비밀번호를 입력해주세요</string>
    <string name="message_select_date">날짜를 선택해주세요</string>
    <string name="message_all_reset">모든 정보가 초기화 되었습니다.</string>
    <string name="message_remove_all_schedule">기기에 저장된 모든 일정을 삭제합니다</string>
    <string name="message_success_remove_all_schedule">모든 일정이 삭제되었습니다.</string>
    <string name="message_reset">사용자 계정 및 기기에 저장된 모든 데이터를 삭제합니다.</string>
    <string name="message_update_timetable">시간표가 업데이트 되었습니다.</string>
    <string name="message_show_alarm_popup">일정 알림을 팝업으로 띄웁니다.</string>
    <string name="message_no_alarm_popup">일정 알림이 보이지 않게 됩니다.(권장하지 않음)</string>
    <string name="message_alarm_vibrate">알림시 진동이 울립니다.</string>
    <string name="message_alarm_no_vibrate">알림시 진동이 울리지 않습니다.</string>
    <string name="message_really_logout">로그아웃해도 저장된 데이터는 그대로 남아있습니다. 로그아웃 하시겠습니까?</string>
    <string name="message_really_update_timetable">기존에 저장된 시간표 데이터는 모두 사라집니다. 시간표를 업데이트 할까요?</string>
    <string name="message_change_semester">기존 일정데이터는 모두 이전학기로 바뀌며, 이번학기에 맞는 새로운 일정을 추가하세요! (시간표 업데이트가 필요한 경우 설정에서 업데이트 해주세요)</string>
    <string name="title_change_semester">새학기 시작</string>
    <string name="message_no_score_list">학점 기록이 없습니다.</string>
    <string name="create_schedule">새로 추가</string>
    <string name="edit_schedule">내용 수정</string>
    <string name="no_subject">과목없음</string>
    <string name="help_main">시간표</string>
    <string name="help_main_content">이번학기 시간표, 달구지 시간, 다가오는 나의 과제나 일정이 있습니다. 그리고 시간표의 해당과목을 누르면 더 자세한 정보(장소, 시간, 위치, 과목 별 일정, 과목 색상 변경 등)를 확인할 수 있습니다.</string>
    <string name="help_grade">학점관리</string>
    <string name="help_grade_content">집계된 내 전체 이수 및 평균 학점을 볼 수 있으며, 이번학기 수강하는 과목을 갖고 예상 성적을 미리 계산해볼 수 있습니다. 그리고 내가 받은 이전학기의 성적을 학기별로 확인할 수 있습니다.</string>
    <string name="help_map">캠퍼스지도</string>
    <string name="help_map_content">교내에 있는 각 건물의 위치와, 위로 슬라이드하면 각 건물 내에 모든 장소를 확인할 수 있습니다. 예를들어 내가 원하는 교수님의 연구실의 위치라던지, 동아리방 등 다양하게 이용할 수 있습니다.</string>
    <string name="help_report">일정관리</string>
    <string name="help_report_content">과목 별 과제나 시험 등 다양한 일정 또는 메모를 추가하고 내가 원하는 시간에 알람을 받을 수 있습니다.\n  이 시스템은 학기별로 운영되며 매년 각 학기가 시작되는 때부터(3월, 9월) 추가한 일정은 새로운 학기로 자동으로 등록되며 이전의 내 일정은 모두 지난 학기 일정에서 모아볼 수 있습니다.\n  또한 교내 홈페이지에서 제공하는 학사일정표도 바로 찾아보세요.</string>
</resources>
