<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context=".Activity.CreateScheduleActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_create"
        android:layout_width="match_parent"
        android:padding="0dp"
        android:layout_margin="0dp"
        android:contentInsetEnd="0dp"
        android:contentInsetRight="0dp"
        android:contentInsetStart="0dp"
        android:contentInsetLeft="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:contentInsetEnd="0dp"
        app:contentInsetRight="0dp"
        android:layout_height="54dp">
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/create_time_frame"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_centerVertical="true"
                    android:id="@+id/create_time_title"
                    android:layout_width="wrap_content"
                    android:text="@string/date"
                    android:layout_marginLeft="8dp"
                    android:textSize="16sp"
                    android:layout_marginRight="12dp"
                    android:textColor="@color/colorPrimary"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/create_time"
                    android:layout_toRightOf="@id/create_time_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:textSize="15sp"
                    android:text="@string/message_select_date"
                    android:textColor="@color/colorPrimaryBlack"/>
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/colorDividerGray"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_centerVertical="true"
                    android:id="@+id/create_subject_title"
                    android:layout_width="wrap_content"
                    android:text="@string/subject"
                    android:layout_marginLeft="8dp"
                    android:textSize="16sp"
                    android:layout_marginRight="12dp"
                    android:textColor="@color/colorPrimary"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/create_subject"
                    android:layout_toRightOf="@id/create_subject_title"
                    android:textColor="@color/colorPrimaryBlack"
                    android:textSize="15sp"
                    android:text="@string/message_choice_subject"/>
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/colorDividerGray"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_centerVertical="true"
                    android:id="@+id/create_priority_title"
                    android:layout_width="wrap_content"
                    android:text="@string/importance"
                    android:layout_marginLeft="8dp"
                    android:textSize="16sp"
                    android:layout_marginRight="12dp"
                    android:textColor="@color/colorPrimary"
                    android:layout_height="wrap_content" />
                <RatingBar
                    android:id="@+id/create_priority"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="?android:attr/ratingBarStyleIndicator"
                    android:stepSize="1"
                    android:isIndicator="false"
                    android:layout_toRightOf="@id/create_priority_title"/>
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/colorDividerGray"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/alarm_frame"
            android:visibility="gone"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_centerVertical="true"
                    android:id="@+id/create_subject_real_alarm"
                    android:layout_width="wrap_content"
                    android:text="@string/alarm"
                    android:layout_marginLeft="8dp"
                    android:textSize="16sp"
                    android:layout_marginRight="12dp"
                    android:textColor="@color/colorPrimary"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/create_subject_real_alarm_time"
                    android:layout_toRightOf="@id/create_subject_real_alarm"
                    android:textColor="@color/colorPrimaryBlack"
                    android:textSize="15sp"
                    android:text="@string/alarm_type1"/>
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/colorDividerGray"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/create_title_title"
                    android:layout_width="wrap_content"
                    android:text="@string/title"
                    android:textSize="16sp"
                    android:layout_marginRight="12dp"
                    android:layout_marginBottom="4dp"
                    android:textColor="@color/colorPrimary"
                    android:layout_height="wrap_content" />
                <EditText
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/create_title"
                    android:hint="@string/message_no_title"
                    android:textColor="@color/colorPrimaryBlack"
                    android:textSize="15sp"
                    android:background="@android:color/transparent"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/create_content_title"
                    android:layout_width="wrap_content"
                    android:text="@string/content"
                    android:textSize="16sp"
                    android:layout_marginBottom="4dp"
                    android:textColor="@color/colorPrimary"
                    android:layout_height="wrap_content" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/create_content"
                    android:hint="@string/message_no_content"
                    android:textColor="@color/colorPrimaryBlack"
                    android:textSize="15sp"
                    android:background="@android:color/transparent"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>